tests/cases/control-flow/ok/while-true-continue-break-owner-state.ari
fn main() -> i64 {
  let keep_going = false;
  let token: own i64 = 5;
  while true {
    if keep_going {
      continue;
    }
    drop token;
    break;
  }
  return 0;
}
