tests/cases/control-flow/errors/loop-continue-live-owner.ari
fn main() -> i64 {
  while true {
    let token: own i64 = 5;
    continue;
  }
  return 0;
}
